--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -504,6 +504,11 @@
 									"path": "./admin/templates/extending-templates/provider-authentication.md"
 								},
 								{
+									"title": "Configure a template for dev containers",
+									"description": "How to use modules and configurations to configure your template for dev containers",
+									"path": "./admin/templates/extending-templates/provider-authentication.md"
+								},
+								{
 									"title": "Process Logging",
 									"description": "Log workspace processes",
 									"path": "./admin/templates/extending-templates/process-logging.md",
