--- a/site/package.json
+++ b/site/package.json
@@ -51,7 +51,6 @@
 		"@fontsource/source-code-pro": "5.2.5",
 		"@monaco-editor/react": "4.6.0",
 		"@mui/icons-material": "5.16.14",
-		"@mui/lab": "5.0.0-alpha.175",
 		"@mui/material": "5.16.14",
 		"@mui/system": "5.16.14",
 		"@mui/utils": "5.16.14",
@@ -195,7 +194,11 @@
 		"vite-plugin-checker": "0.8.0",
 		"vite-plugin-turbosnap": "1.0.3"
 	},
-	"browserslist": ["chrome 110", "firefox 111", "safari 16.0"],
+	"browserslist": [
+		"chrome 110",
+		"firefox 111",
+		"safari 16.0"
+	],
 	"resolutions": {
 		"optionator": "0.9.3",
 		"semver": "7.6.2"
