fix: remove nodejs upper version limit

--- a/site/package.json
+++ b/site/package.json
@@ -200,8 +200,8 @@
 		"semver": "7.6.2"
 	},
 	"engines": {
-		"npm": ">=9.0.0 <10.0.0",
-		"node": ">=18.0.0 <21.0.0"
+		"npm": ">=9.0.0",
+		"node": ">=18.0.0"
 	},
 	"pnpm": {
 		"overrides": {
