--- a/site/package.json
+++ b/site/package.json
@@ -88,7 +88,7 @@
 		"cron-parser": "4.9.0",
 		"cronstrue": "2.50.0",
 		"date-fns": "2.30.0",
-		"dayjs": "1.11.13",
+		"date-fns-tz": "2",
 		"emoji-mart": "5.6.0",
 		"file-saver": "2.0.5",
 		"formik": "2.4.6",
