Add tzdata back

--- a/site/package.json
+++ b/site/package.json
@@ -119,6 +119,7 @@
 		"semver": "7.6.2",
 		"tailwind-merge": "2.6.0",
 		"tailwindcss-animate": "1.0.7",
+		"tzdata": "1.0.40",
 		"ua-parser-js": "1.0.40",
 		"ufuzzy": "npm:@leeoniya/ufuzzy@1.0.10",
 		"undici": "6.21.1",
@@ -193,7 +194,11 @@
 		"vite-plugin-checker": "0.8.0",
 		"vite-plugin-turbosnap": "1.0.3"
 	},
-	"browserslist": ["chrome 110", "firefox 111", "safari 16.0"],
+	"browserslist": [
+		"chrome 110",
+		"firefox 111",
+		"safari 16.0"
+	],
 	"resolutions": {
 		"optionator": "0.9.3",
 		"semver": "7.6.2"
