--- a/site/package.json
+++ b/site/package.json
@@ -90,6 +90,7 @@
 		"file-saver": "2.0.5",
 		"formik": "2.4.6",
 		"front-matter": "4.0.2",
+		"humanize-duration": "3.32.2",
 		"jszip": "3.10.1",
 		"lodash": "4.17.21",
 		"lucide-react": "0.474.0",
@@ -148,6 +149,7 @@
 		"@types/color-convert": "2.0.4",
 		"@types/express": "4.17.17",
 		"@types/file-saver": "2.0.7",
+		"@types/humanize-duration": "3.27.4",
 		"@types/jest": "29.5.14",
 		"@types/lodash": "4.17.15",
 		"@types/node": "20.17.16",
