--- a/site/package.json
+++ b/site/package.json
@@ -69,7 +69,7 @@
 		"@radix-ui/react-slot": "1.1.1",
 		"@radix-ui/react-switch": "1.1.1",
 		"@radix-ui/react-tooltip": "1.1.7",
-		"@tanstack/react-query-devtools": "4.35.3",
+		"@tanstack/react-query-devtools": "5.77.0",
 		"@xterm/addon-canvas": "0.7.0",
 		"@xterm/addon-fit": "0.10.0",
 		"@xterm/addon-unicode11": "0.8.0",
@@ -103,7 +103,7 @@
 		"react-dom": "18.3.1",
 		"react-helmet-async": "2.0.5",
 		"react-markdown": "9.0.3",
-		"react-query": "npm:@tanstack/react-query@4.35.3",
+		"react-query": "npm:@tanstack/react-query@5.77.0",
 		"react-router-dom": "6.26.2",
 		"react-syntax-highlighter": "15.6.1",
 		"react-virtualized-auto-sizer": "1.0.24",
@@ -192,7 +192,11 @@
 		"vite-plugin-checker": "0.8.0",
 		"vite-plugin-turbosnap": "1.0.3"
 	},
-	"browserslist": ["chrome 110", "firefox 111", "safari 16.0"],
+	"browserslist": [
+		"chrome 110",
+		"firefox 111",
+		"safari 16.0"
+	],
 	"resolutions": {
 		"optionator": "0.9.3",
 		"semver": "7.6.2"
