--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -798,6 +798,12 @@
 					"icon_path": "./images/icons/document.svg"
 				},
 				{
+					"title": "Backend",
+					"description": "Our guide for backend development",
+					"path": "./contributing/backend.md",
+					"icon_path": "./images/icons/gear.svg"
+				},
+				{
 					"title": "Frontend",
 					"description": "Our guide for frontend development",
 					"path": "./contributing/frontend.md",
