--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -140,6 +140,11 @@
 							"path": "./user-guides/workspace-access/jetbrains/index.md",
 							"children": [
 								{
+									"title": "JetBrains Fleet",
+									"description": "Connect JetBrains Fleet to a Coder workspace",
+									"path": "./user-guides/workspace-access/jetbrains/fleet.md"
+								},
+								{
 									"title": "JetBrains Gateway",
 									"description": "Use JetBrains Gateway to connect to Coder workspaces",
 									"path": "./user-guides/workspace-access/jetbrains/gateway.md"
