--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -10,7 +10,7 @@
 				{
 					"title": "Screenshots",
 					"description": "View screenshots of the Coder platform",
-					"path": "./start/screenshots.md"
+					"path": "./about/screenshots.md"
 				},
 				{
 					"title": "Quickstart",
@@ -38,25 +38,25 @@
 					{
 						"title": "Code of Conduct",
 						"description": "See the code of conduct for contributing to Coder",
-						"path": "./contributing/CODE_OF_CONDUCT.md",
+						"path": "./CODE_OF_CONDUCT.md",
 						"icon_path": "./images/icons/circle-dot.svg"
 					},
 					{
 						"title": "Documentation",
 						"description": "Our style guide for use when authoring documentation",
-						"path": "./contributing/documentation.md",
+						"path": "./about/contributing/documentation.md",
 						"icon_path": "./images/icons/document.svg"
 					},
 					{
 						"title": "Backend",
 						"description": "Our guide for backend development",
-						"path": "./contributing/backend.md",
+						"path": "./about/contributing/backend.md",
 						"icon_path": "./images/icons/gear.svg"
 					},
 					{
 						"title": "Frontend",
 						"description": "Our guide for frontend development",
-						"path": "./contributing/frontend.md",
+						"path": "./about/contributing/frontend.md",
 						"icon_path": "./images/icons/frontend.svg"
 					},
 					{
