docs: add documentation for installing Coder on Azure with Kubernetes (#16216)
closes #16074 


[preview](https://coder.com/docs/@16074-azure-app-gateway/install/kubernetes/kubernetes-azure-app-gateway)

---------

Co-authored-by: M Atif Ali <atif@coder.com>
Co-authored-by: EdwardAngert <17991901+EdwardAngert@users.noreply.github.com>

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -91,7 +91,14 @@
 					"title": "Kubernetes",
 					"description": "Install Coder on Kubernetes",
 					"path": "./install/kubernetes.md",
-					"icon_path": "./images/icons/kubernetes.svg"
+					"icon_path": "./images/icons/kubernetes.svg",
+					"children": [
+						{
+							"title": "Deploy Coder on Azure with an Application Gateway",
+							"description": "Deploy Coder on Azure with an Application Gateway",
+							"path": "./install/kubernetes/kubernetes-azure-app-gateway.md"
+						}
+					]
 				},
 				{
 					"title": "Rancher",
@@ -925,6 +932,11 @@
 					"title": "Azure Federation",
 					"description": "Federating Coder to Azure",
 					"path": "./tutorials/azure-federation.md"
+				},
+				{
+					"title": "Deploy Coder on Azure with an Application Gateway",
+					"description": "Deploy Coder on Azure with an Application Gateway",
+					"path": "./install/kubernetes/kubernetes-azure-app-gateway.md"
 				},
 				{
 					"title": "Scanning Workspaces with JFrog Xray",
