--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -509,7 +509,7 @@ jobs:
             # C: drive is extremely slow: https://github.com/actions/runner-images/issues/8755
             mkdir -p "R:/temp/embedded-pg"
             mkdir -p "R:/temp/embedded-pg-cache"
-            go run scripts/embedded-pg/main.go -path "R:/temp/embedded-pg" -cache "C:/temp/embedded-pg-cache"
+            go run scripts/embedded-pg/main.go -path "R:/temp/embedded-pg" -cache "R:/temp/embedded-pg-cache"
           elif [ "${{ runner.os }}" == "macOS" ]; then
             # Postgres runs faster on a ramdisk on macOS too
             mkdir -p /tmp/tmpfs
