fix upload cache destination

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -584,9 +584,11 @@ jobs:
 
       - name: Upload Embedded Postgres Cache
         uses: ./.github/actions/embedded-pg-cache/upload
+        # We only use the embedded Postgres cache on macOS and Windows runners.
+        if: runner.OS == 'macOS' || runner.OS == 'Windows'
         with:
-          cache-key: ${{ steps.download-cache.outputs.cache-key }}
-          cache-path: ${{ steps.embedded-pg-cache.outputs.cached-dirs }}
+          cache-key: ${{ steps.download-embedded-pg.outputs.cache-key }}
+          cache-path: ${{ steps.download-embedded-pg-cache.outputs.cached-dirs }}
 
       - name: Upload test stats to Datadog
         timeout-minutes: 1
