docs: add coder registry link to docs sidebar

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1771,6 +1771,12 @@
 					]
 				}
 			]
+		},
+		{
+			"title": "Coder Registry",
+			"description": "The Coder Registry is a collection of Templates and Modules used
+to create and extend Coder workspaces.",
+			"path": "https://registry.coder.com"
 		}
 	]
 }
